# test-native-proj

./: .gitignore  build.sbt
.github/workflows/: release.yml
core/src/main/scala/a/b/c/: Main.java  NativeLoader.scala  Natively.scala  jni.scala  package.scala
native/: Cargo.toml
native/src/: lib.rs
project/: plugins.sbt
