[package]
name = "scala_rust_jni"
version = "0.1.0"
authors = ["chitralverma <chitral.verma@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
publish = false

[lib]
name = "scala_rust_jni"
crate_type = ["cdylib"]

[dependencies]
jni = "0.20"
jni_fn = { git = "https://gitlab.com/antonok/jni_fn.git", branch = "scala-class-dollars" }